# app-chat

./: .gitignore  package-lock.json
.roo/: .rooignore
client-chat-tauri/: .env  .env.LAN  .env.development  .env.production  index.html  package-lock.json  package.json  setup-cargo-path.ps1  vite.config.ts
client-chat-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-chat-tauri/src-tauri/capabilities/: default.json
client-chat-tauri/src-tauri/icons/: icon.icns
client-chat-tauri/src-tauri/src/: lib.rs  main.rs
deploy/: build-client-lan.bat  build-client-tencent.bat  build-client.bat  build-server-lan.bat  build-server-lan.ps1  build-web-lan.bat  chat-server.service  deploy-server-tencent.ps1  deploy-to-tencent.ps1  deploy-web-tencent.bat  deploy-web-tencent.ps1  deploy_go_backend.ps1  nginx-chat-dmz.conf  nginx-chat.conf  run-backend-dev.bat  run-backend.bat  run-client-dev.bat  run-client.bat
docs/: 03_fix_friendship_rls.sql  05_add_file_metadata.sql  06_add_is_revoked.sql  07_fix_revoke_realtime.sql  08_group_chat.sql  09_relax_group_permissions.sql  DEPLOYMENT.md  Go后端接口对齐图纸.md  RELEASE_NOTES_v1.0.0.md  Supabase运维手册.md  app-chat前端API调用参考.md  app-chat后端Go接口对齐图纸.md  app-chat环境搭建与启动指南.md  build-client-xc-plan.md  init_storage_buckets.sql  mention_feature_plan.md  search_history_plan.md  theme_switch_plan.md  unread_bubble_plan.md  前端API调用参考.md  启动本地Supabase容器.txt  启动部署与测试验证指南.md  数据库初始化.sql  更新表结构.sql  环境搭建与启动指南.md
go-chat-server/: go.mod  go.sum  main.go
supabase-sql/: 01_init_database.sql  02_add_online_status.sql  06_add_is_revoked.sql  (+3 more)
(+58 files in other folders)
