[package]
name = "client-chat-tauri"
version = "0.1.0"
description = "安全、即时、高效的内网聊天工具"
authors = ["you"]
edition = "2021"

[lib]
name = "client_chat_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
